# iced_sctk

./: Cargo.toml  README.md
src/: application.rs  conversion.rs  lib.rs  sctk_event.rs  settings.rs  subsurface_widget.rs  widget.rs
src/clipboard/: mod.rs
src/command/platform_specific/: mod.rs
src/command/platform_specific/wayland/: window.rs
src/command/wayland/: mod.rs
src/commands/: activation.rs  data_device.rs  layer_surface.rs  popup.rs  session_lock.rs  window.rs
src/event_loop/: mod.rs  state.rs
src/handlers/seat/: pointer.rs
src/handlers/shell/: xdg_window.rs
src/multi_window/: mod.rs  settings.rs
src/widget/: operation.rs
src/widget/operation/: search_id.rs
